edgevox-onnx/c-api/c-api.h

/** @brief Streaming decoding state for one utterance or stream. */
typedef struct EdgevoxOnnxOnlineStream EdgevoxOnnxOnlineStream;
// ============================================================
// For keyword spotting
// ============================================================
/**
 * @brief Snapshot of the current keyword spotting result.
 *
 * Free this object with EdgevoxOnnxDestroyKeywordResult().
 * @see EdgevoxOnnxGetKeywordResult
 */
typedef struct EdgevoxOnnxKeywordResult {
  /**
   * Triggered keyword text.
   *
   * For English models this is usually space-separated words. For Chinese
   * models it is typically the surface form without spaces.
   */
  const char *keyword;

  /**
   * Token sequence as a single string.
   *
   * For BPE-based models this contains the decoded BPE tokens.
   */
  const char *tokens;

  /**
   * Token sequence as an array.
   *
   * The array length is @c count. Each string is owned by this result object.
   */
  const char *const *tokens_arr;

  /** Number of decoded tokens in @c tokens_arr and @c timestamps. */
  int32_t count;

  /**
   * Per-token timestamps in seconds.
   *
   * This array has @c count elements. Element @c i corresponds to
   * `tokens_arr[i]`.
   */
  float *timestamps;

  /** Start time of the current segment in seconds. */
  float start_time;

  /**
   * JSON representation of the result.
   *
   * The JSON includes `keyword`, `tokens`, `timestamps`, and `start_time`.
   */
  const char *json;
} EdgevoxOnnxKeywordResult;
/**
 * @brief Configuration for keyword spotting.
 *
 * The acoustic model is configured through @c model_config. In practice this is
 * usually a streaming transducer model.
 *
 * Keyword definitions can be provided either through @c keywords_file or
 * through @c keywords_buf/@c keywords_buf_size. If both are set, the buffer is
 * used.
 *
 * Example using
 * `edgevox-onnx-kws-zipformer-wenetspeech-3.3M-2024-01-01-mobile`:
 *
 * @code
 * EdgevoxOnnxKeywordSpotterConfig config;
 * memset(&config, 0, sizeof(config));
 *
 * config.model_config.transducer.encoder =
 *     "./edgevox-onnx-kws-zipformer-wenetspeech-3.3M-2024-01-01-mobile/"
 *     "encoder-epoch-12-avg-2-chunk-16-left-64.int8.onnx";
 * config.model_config.transducer.decoder =
 *     "./edgevox-onnx-kws-zipformer-wenetspeech-3.3M-2024-01-01-mobile/"
 *     "decoder-epoch-12-avg-2-chunk-16-left-64.onnx";
 * config.model_config.transducer.joiner =
 *     "./edgevox-onnx-kws-zipformer-wenetspeech-3.3M-2024-01-01-mobile/"
 *     "joiner-epoch-12-avg-2-chunk-16-left-64.int8.onnx";
 * config.model_config.tokens =
 *     "./edgevox-onnx-kws-zipformer-wenetspeech-3.3M-2024-01-01-mobile/"
 *     "tokens.txt";
 * config.model_config.provider = "cpu";
 * config.model_config.num_threads = 1;
 *
 * config.keywords_file =
 *     "./edgevox-onnx-kws-zipformer-wenetspeech-3.3M-2024-01-01-mobile/"
 *     "test_wavs/test_keywords.txt";
 * config.max_active_paths = 4;
 * config.keywords_score = 3.0f;
 * config.keywords_threshold = 0.1f;
 * @endcode
 * @see EdgevoxOnnxCreateKeywordSpotter
 */
typedef struct EdgevoxOnnxKeywordSpotterConfig {
  /** Feature extraction parameters. */
  EdgevoxOnnxFeatureConfig feat_config;
  /** Streaming acoustic model configuration. */
  EdgevoxOnnxOnlineModelConfig model_config;
  /** Maximum number of active decoding paths. */
  int32_t max_active_paths;
  /** Number of trailing blank symbols required before trigger finalization. */
  int32_t num_trailing_blanks;
  /** Bonus score applied to keywords during search. */
  float keywords_score;
  /** Detection threshold. Larger values are more conservative. */
  float keywords_threshold;
  /** Optional keyword file. */
  const char *keywords_file;
  /** Optional in-memory keyword data. If non-null, it overrides @c
   * keywords_file. */
  const char *keywords_buf;
  /** Size in bytes of @c keywords_buf, excluding any trailing `'\0'`. */
  int32_t keywords_buf_size;
} EdgevoxOnnxKeywordSpotterConfig;
/** @brief Opaque keyword spotter handle. */
typedef struct EdgevoxOnnxKeywordSpotter EdgevoxOnnxKeywordSpotter;
/**
 * @brief Create a keyword spotter.
 *
 * @param config Keyword spotter configuration.
 * @return A newly allocated keyword spotter on success, or NULL on error. Free
 *         it with EdgevoxOnnxDestroyKeywordSpotter().
 * @see EdgevoxOnnxKeywordSpotterConfig, EdgevoxOnnxDestroyKeywordSpotter
 */
EDGEVOX_ONNX_API const EdgevoxOnnxKeywordSpotter *EdgevoxOnnxCreateKeywordSpotter(
    const EdgevoxOnnxKeywordSpotterConfig *config);
/**
 * @brief Destroy a keyword spotter.
 *
 * @param spotter A pointer returned by EdgevoxOnnxCreateKeywordSpotter().
 * @see EdgevoxOnnxCreateKeywordSpotter
 */
EDGEVOX_ONNX_API void EdgevoxOnnxDestroyKeywordSpotter(
    const EdgevoxOnnxKeywordSpotter *spotter);
/**
 * @brief Create a keyword spotting stream using the spotter's built-in keyword
 * list.
 *
 * @param spotter A pointer returned by EdgevoxOnnxCreateKeywordSpotter().
 * @return A newly allocated stream. Free it with
 * EdgevoxOnnxDestroyOnlineStream().
 */
EDGEVOX_ONNX_API const EdgevoxOnnxOnlineStream *EdgevoxOnnxCreateKeywordStream(
    const EdgevoxOnnxKeywordSpotter *spotter);
/**
 * @brief Create a keyword spotting stream with extra or replacement keywords.
 *
 * The @p keywords string uses the same textual format as the keyword files used
 * by the examples. For instance:
 *
 * @code
 * const EdgevoxOnnxOnlineStream *stream =
 *     EdgevoxOnnxCreateKeywordStreamWithKeywords(
 *         kws, "y ǎn y uán @演员/zh ī m íng @知名");
 * @endcode
 *
 * @param spotter A pointer returned by EdgevoxOnnxCreateKeywordSpotter().
 * @param keywords Inline keyword definition string.
 * @return A newly allocated stream. Free it with
 * EdgevoxOnnxDestroyOnlineStream().
 */
EDGEVOX_ONNX_API const EdgevoxOnnxOnlineStream *
EdgevoxOnnxCreateKeywordStreamWithKeywords(
    const EdgevoxOnnxKeywordSpotter *spotter, const char *keywords);
/**
 * @brief Check whether a keyword stream has enough audio for decoding.
 *
 * @param spotter A pointer returned by EdgevoxOnnxCreateKeywordSpotter().
 * @param stream A pointer returned by EdgevoxOnnxCreateKeywordStream() or
 *               EdgevoxOnnxCreateKeywordStreamWithKeywords().
 * @return 1 if the stream is ready to decode; otherwise 0.
 */
EDGEVOX_ONNX_API int32_t
EdgevoxOnnxIsKeywordStreamReady(const EdgevoxOnnxKeywordSpotter *spotter,
                               const EdgevoxOnnxOnlineStream *stream);
/**
 * @brief Decode one ready keyword stream.
 *
 * Call this only when EdgevoxOnnxIsKeywordStreamReady() returns 1.
 *
 * @param spotter A pointer returned by EdgevoxOnnxCreateKeywordSpotter().
 * @param stream A pointer returned by EdgevoxOnnxCreateKeywordStream() or
 *               EdgevoxOnnxCreateKeywordStreamWithKeywords().
 */
EDGEVOX_ONNX_API void EdgevoxOnnxDecodeKeywordStream(
    const EdgevoxOnnxKeywordSpotter *spotter,
    const EdgevoxOnnxOnlineStream *stream);
/**
 * @brief Reset a keyword stream after a keyword is detected.
 *
 * The examples call this immediately after a successful trigger so the next
 * keyword can be detected independently.
 *
 * @param spotter A pointer returned by EdgevoxOnnxCreateKeywordSpotter().
 * @param stream A pointer returned by EdgevoxOnnxCreateKeywordStream() or
 *               EdgevoxOnnxCreateKeywordStreamWithKeywords().
 */
EDGEVOX_ONNX_API void EdgevoxOnnxResetKeywordStream(
    const EdgevoxOnnxKeywordSpotter *spotter,
    const EdgevoxOnnxOnlineStream *stream);
/**
 * @brief Decode multiple ready keyword streams in parallel.
 *
 * The caller must ensure every stream in @p streams is ready before calling
 * this function.
 *
 * @param spotter A pointer returned by EdgevoxOnnxCreateKeywordSpotter().
 * @param streams Array of ready streams.
 * @param n Number of elements in @p streams.
 */
EDGEVOX_ONNX_API void EdgevoxOnnxDecodeMultipleKeywordStreams(
    const EdgevoxOnnxKeywordSpotter *spotter,
    const EdgevoxOnnxOnlineStream **streams, int32_t n);
/**
 * @brief Get the current keyword spotting result for a stream.
 *
 * The returned snapshot may represent either "no trigger yet" or a detected
 * keyword. A common pattern is to check whether `strlen(r->keyword) != 0`.
 *
 * @param spotter A pointer returned by EdgevoxOnnxCreateKeywordSpotter().
 * @param stream A pointer returned by EdgevoxOnnxCreateKeywordStream() or
 *               EdgevoxOnnxCreateKeywordStreamWithKeywords().
 * @return A newly allocated result snapshot. Free it with
 *         EdgevoxOnnxDestroyKeywordResult().
 *
 * @code
 * const EdgevoxOnnxKeywordResult *r = EdgevoxOnnxGetKeywordResult(kws, stream);
 * if (r && r->json && strlen(r->keyword)) {
 *   fprintf(stderr, "Detected keyword: %s\n", r->json);
 *   EdgevoxOnnxResetKeywordStream(kws, stream);
 * }
 * EdgevoxOnnxDestroyKeywordResult(r);
 * @endcode
 * @see EdgevoxOnnxDestroyKeywordResult
 */
EDGEVOX_ONNX_API const EdgevoxOnnxKeywordResult *EdgevoxOnnxGetKeywordResult(
    const EdgevoxOnnxKeywordSpotter *spotter,
    const EdgevoxOnnxOnlineStream *stream);
/**
 * @brief Destroy a keyword result snapshot.
 *
 * @param r A pointer returned by EdgevoxOnnxGetKeywordResult().
 * @see EdgevoxOnnxGetKeywordResult
 */
EDGEVOX_ONNX_API void EdgevoxOnnxDestroyKeywordResult(
    const EdgevoxOnnxKeywordResult *r);
/**
 * @brief Get the current keyword spotting result as JSON.
 *
 * @param spotter A pointer returned by EdgevoxOnnxCreateKeywordSpotter().
 * @param stream A pointer returned by EdgevoxOnnxCreateKeywordStream() or
 *               EdgevoxOnnxCreateKeywordStreamWithKeywords().
 * @return A newly allocated JSON string. Free it with
 *         EdgevoxOnnxFreeKeywordResultJson().
 */
EDGEVOX_ONNX_API const char *EdgevoxOnnxGetKeywordResultAsJson(
    const EdgevoxOnnxKeywordSpotter *spotter,
    const EdgevoxOnnxOnlineStream *stream);
/**
 * @brief Free a JSON string returned by EdgevoxOnnxGetKeywordResultAsJson().
 *
 * @param s A pointer returned by EdgevoxOnnxGetKeywordResultAsJson().
 */
EDGEVOX_ONNX_API void EdgevoxOnnxFreeKeywordResultJson(const char *s);